--- a/CinematrixFront/src/app/app.component.html
+++ b/CinematrixFront/src/app/app.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar color="primary" class="expanded-toolbar">
   <span>
     <button mat-button routerLink="/">{{ title }}</button>
-    <button mat-button routerLink="/"><mat-icon>home</mat-icon></button>
+    <button mat-button routerLink="/home"><mat-icon>home</mat-icon></button>
   </span>
   <div fxLayout="row" fxShow="false" fxShow.gt-sm>
-    <button mat-button (click)="login()" routerLink="/login" *ngIf="!isAuthenticated">
+    <button mat-button (click)="login()" *ngIf="!isAuthenticated">
       <mat-icon>power_settings_new</mat-icon>
       Login
     </button>
@@ -21,23 +21,5 @@
     <mat-icon>menu</mat-icon>
   </button> -->
 </mat-toolbar>
-<!-- <mat-menu x-position="before" #menu="matMenu">
-  <button mat-menu-item routerLink="/">
-    <mat-icon>home</mat-icon>
-    Home
-  </button>
-  <button mat-menu-item routerLink="/game">
-    <mat-icon>gamepad</mat-icon>
-    Play
-  </button>
-  <button mat-menu-item routerLink="/login" *ngIf="!isAuthenticated">
-    <mat-icon>power_settings_new</mat-icon>
-    Login
-  </button>
-  <button mat-menu-item *ngIf="isAuthenticated" (click)="logout()">
-    <mat-icon>exit_to_app</mat-icon>
-    Logout
-  </button>
-</mat-menu> -->
 
 <router-outlet></router-outlet>
