--- a/CinematrixFront/src/app/components/shared/left-navbar/left-navbar.component.html
+++ b/CinematrixFront/src/app/components/shared/left-navbar/left-navbar.component.html
@@ -1,1 +1,9 @@
-<p>left-navbar works!</p>
+<mat-drawer-container class="example-container" autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="side">
+    <p>Auto-resizing sidenav</p>
+  </mat-drawer>
+
+  <div class="example-sidenav-content">
+    <button type="button" mat-button (click)="drawer.toggle()">Toggle sidenav</button>
+  </div>
+</mat-drawer-container>
