--- a/CinematrixFront/src/app/app.component.html
+++ b/CinematrixFront/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="expanded-toolbar">
   <span>
     <button mat-button routerLink="/">{{ title }}</button>
-    <button mat-button routerLink="/home"><mat-icon>home</mat-icon></button>
+    <button mat-button routerLink="home"><mat-icon>home</mat-icon></button>
   </span>
   <div fxLayout="row" fxShow="false" fxShow.gt-sm>
     <button mat-button (click)="login()" *ngIf="!isAuthenticated">
