Update Login Form

--- a/CinematrixFront/src/app/app.component.scss
+++ b/CinematrixFront/src/app/app.component.scss
@@ -1,4 +1,17 @@
 .expanded-toolbar {
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  top: 0;
+  z-index: 2;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
