--- a/CinematrixFront/src/app/components/login/login.component.scss
+++ b/CinematrixFront/src/app/components/login/login.component.scss
@@ -1,9 +1,28 @@
 mat-card {
-  max-width: 400px;
-  margin: 2em auto;
-  text-align: center;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 mat-form-field {
   display: block;
+  margin: 20px 0 20px 0;
+  width: 100%;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#first-form {
+  margin-top: 50px;
+}
+
+button {
+  margin-top: 20px;
+  width: 100%;
 }
